[gd_scene load_steps=14 format=2]

[ext_resource path="res://gfx/theme.tres" type="Theme" id=1]
[ext_resource path="res://fonts/mascot-management.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Benefits.gd" type="Script" id=3]
[ext_resource path="res://scripts/BenefitButton.gd" type="Script" id=4]
[ext_resource path="res://gfx/button_small_font.tres" type="Theme" id=5]
[ext_resource path="res://gfx/benefits_btn.png" type="Texture" id=6]
[ext_resource path="res://sfx/party.mp3" type="AudioStream" id=7]
[ext_resource path="res://sfx/gym.mp3" type="AudioStream" id=8]
[ext_resource path="res://sfx/freshfruits.mp3" type="AudioStream" id=9]
[ext_resource path="res://sfx/teambuilding.mp3" type="AudioStream" id=10]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.603922, 0.560784, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.388235, 0.364706, 0.588235, 1 )

[sub_resource type="DynamicFont" id=8]
size = 7
font_data = ExtResource( 2 )

[node name="Benefits" type="Control"]
margin_left = -240.0
margin_top = 20.0
margin_bottom = 160.0
script = ExtResource( 3 )

[node name="Header" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_right = 48.0
margin_bottom = 16.0
color = Color( 0.388235, 0.364706, 0.588235, 1 )

[node name="Label" type="Label" parent="Header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -5.5
margin_right = 53.5
margin_bottom = 5.5
theme = ExtResource( 1 )
text = "Benefits"
align = 1

[node name="Buttons" type="Control" parent="."]
margin_right = 152.0
margin_bottom = 100.0

[node name="Celebration" type="Button" parent="Buttons"]
margin_left = 9.0
margin_top = 28.0
margin_right = 151.0
margin_bottom = 42.0
rect_min_size = Vector2( 142, 14 )
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = " COMPANY CELEBRATION               100$"
icon = ExtResource( 6 )
align = 0
script = ExtResource( 4 )
price = 100
tooltip = "Start a party for your mascots. It will keep your mascots for more days."
days = 1
type = "celebration"
audio = ExtResource( 7 )

[node name="TeamBuilding" type="Button" parent="Buttons"]
margin_left = 9.0
margin_top = 45.0
margin_right = 151.0
margin_bottom = 59.0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = " TEAMBUILDING                             200$"
icon = ExtResource( 6 )
align = 0
script = ExtResource( 4 )
price = 200
tooltip = "Shape your team into a strong unit. It will increase the reliabilty and keeps your mascots in company."
days = 1
type = "teambuilding"
audio = ExtResource( 10 )

[node name="FreshFruits" type="Button" parent="Buttons"]
margin_left = 9.0
margin_top = 68.0
margin_right = 151.0
margin_bottom = 82.0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = " FRESH FRUITS                      5$/d - 5d"
icon = ExtResource( 6 )
align = 0
script = ExtResource( 4 )
price = 5
tooltip = "Offer your mascots fresh fruit to be fit and healthy. It will decrease the risk for illness."
days = 5
type = "fruits"
audio = ExtResource( 9 )

[node name="SportCourses" type="Button" parent="Buttons"]
margin_left = 9.0
margin_top = 85.0
margin_right = 151.0
margin_bottom = 99.0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = " GYM COURSE                     20$/d - 10d"
icon = ExtResource( 6 )
align = 0
script = ExtResource( 4 )
price = 20
tooltip = "Let your mascots do some free workouts. It will decrease the risk for illness by 80 percent."
days = 10
type = "gym"
audio = ExtResource( 8 )

[node name="InfoPanel" type="MarginContainer" parent="."]
margin_left = 159.0
margin_top = 28.0
margin_right = 230.0
margin_bottom = 69.0

[node name="bg" type="ColorRect" parent="InfoPanel"]
margin_right = 71.0
margin_bottom = 41.0
color = Color( 0.988235, 0.988235, 0.988235, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPanel"]
margin_right = 71.0
margin_bottom = 41.0

[node name="spacer" type="Control" parent="InfoPanel/HBoxContainer"]
margin_bottom = 41.0

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel/HBoxContainer"]
margin_left = 4.0
margin_right = 71.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="spacer" type="Control" parent="InfoPanel/HBoxContainer/VBoxContainer"]
margin_right = 67.0

[node name="hint" type="Label" parent="InfoPanel/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 67.0
margin_bottom = 41.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.388235, 0.364706, 0.588235, 1 )
custom_fonts/font = SubResource( 8 )
text = "START A PARTY FOR YOUR MASCOTS. IT WILL INCREASE THE RELIABILTY."
autowrap = true
uppercase = true

[connection signal="pressed" from="Buttons/Celebration" to="Buttons/Celebration" method="onClicked"]
[connection signal="pressed" from="Buttons/TeamBuilding" to="Buttons/TeamBuilding" method="onClicked"]
[connection signal="pressed" from="Buttons/FreshFruits" to="Buttons/FreshFruits" method="onClicked"]
[connection signal="pressed" from="Buttons/SportCourses" to="Buttons/SportCourses" method="onClicked"]
